--- a/docs/erb-org/usage_develop.erb.org
+++ b/docs/erb-org/usage_develop.erb.org
@@ -7,5 +7,5 @@ Overview of 'harpwise develop':
   The required additional argument specifies a task to perform; it can be
   one of:
 
-<%= get_extra_desc_all(for_usage: true).join("\n") %>
+<%= get_extra_desc_all(mode: :develop, for_usage: true).join("\n") %>
   
