--- a/docs/erb-org/usage_tools.erb.org
+++ b/docs/erb-org/usage_tools.erb.org
@@ -7,7 +7,7 @@ Overview of 'harpwise tools':
   The required additional argument specifies the tool to run;
   it can be one of:
 
-<%= get_extra_desc_all(for_usage: true).join("\n") %>
+<%= get_extra_desc_all(mode: :tools, for_usage: true).join("\n") %>
   
 
 Usage by Examples:
