--- a/docs/_org/usage_develop.org
+++ b/docs/_org/usage_develop.org
@@ -7,16 +7,18 @@ Overview of 'harpwise develop':
   The required additional argument specifies a task to perform; it can be
   one of:
 
-    - man-proc:
-  [2m    process/produce man page from erb-template[0m
-    - man-diff:
+    - docs-make-man:
+  [2m    process/produce man page from its own erb-template[0m
+    - docs-diff-man:
   [2m    compare produced man page with usage[0m
-    - doc-proc:
+    - docs-make-org-txt:
   [2m    process template from docs/erb-org and produce files[0m
   [2m    in _org and _txt[0m
-    - html-proc:
+    - docs-make-html:
   [2m    process org-files with org-publish from docs/_org and produce[0m
   [2m    file in _html[0m
+    - docs-all:
+  [2m    all docs-xyz extras one after the other[0m
     - selftest:
   [2m    perform selftest with special regard to the environment[0m
     - unittest:
