towards github pages

--- a/docs/_org/usage_develop.org
+++ b/docs/_org/usage_develop.org
@@ -1,3 +1,5 @@
+* Uage examples for harpwise, mode develop
+
 Overview of 'harpwise develop':
 
   This mode is useful only for the maintainer or developer of
