--- a/docs/_org/usage_listen.org
+++ b/docs/_org/usage_listen.org
@@ -1,3 +1,5 @@
+* Uage examples for harpwise, mode listen
+
 Overview of 'harpwise listen':
 
   The mode 'listen' shows information on the notes you play; depending
