--- a/docs/_org/usage_play.org
+++ b/docs/_org/usage_play.org
@@ -1,3 +1,5 @@
+* Uage examples for harpwise, mode play
+
 Overview of 'harpwise play':
 
   The mode 'play' takes its arguments (holes, notes, semitones, licks,
