--- a/docs/_org/usage_print.org
+++ b/docs/_org/usage_print.org
@@ -1,3 +1,5 @@
+* Uage examples for harpwise, mode print
+
 Overview of 'harpwise print':
 
   The mode 'print' takes its arguments (holes, notes, licks, scales,
