--- a/docs/_org/usage_samples.org
+++ b/docs/_org/usage_samples.org
@@ -1,3 +1,5 @@
+* Uage examples for harpwise, mode samples
+
 Overview of 'harpwise samples':
 
   The wise needs a set of audio-samples; these are the sounds-files
