--- a/docs/_org/usage_tools.org
+++ b/docs/_org/usage_tools.org
@@ -1,3 +1,5 @@
+* Uage examples for harpwise, mode tools
+
 Overview of 'harpwise tools':
 
   The mode 'tools' offers some non-interactive but useful utilities,
