--- a/docs/_org/usage_quiz.org
+++ b/docs/_org/usage_quiz.org
@@ -1,3 +1,5 @@
+* Uage examples for harpwise, mode quiz
+
 Overview of 'harpwise quiz':
 
   The mode 'quiz' is a quiz on music theory, ear and memory. It is
