--- a/docs/erb-org/usage_licks.erb.org
+++ b/docs/erb-org/usage_licks.erb.org
@@ -84,9 +84,9 @@ Usage by Examples:
     harpwise licks a -t starred
 
   and use mode print to see details about starred licks.
-  Which licks are starred is kept in file (e.g)
+  The list of starred licks is kept e.g. in:
 
-    <%=$star_file_template % 'richter'%>
+    ~/harpwise/licks/richter/starred.yaml
 
 
   There are some more options to *filter* the set of available licks
