--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 # -*- fill-column: 74 -*-
 
-* Summary
+* Harpwise
 
 A harmonica tool for the command line, using microphone and speaker.
 
@@ -9,11 +9,11 @@ It offers various tools, an explorable quiz and may guide your jamming.
 It can be used with diatonic (richter) or chromatic harmonicas in
 different keys.
 
-  [[docs/images/harmonica3.png]]
+[[docs/images/harmonica3.png]]
 
 See:
 
 - https://marcihm.github.io/harpwise for full documentation or
-- screenshot below for a first impression
+- Screenshot below for a first impression
 
   [[docs/images/harpwise-listen.gif]]
